	- fix: Ferror returned spurious error for gzdio/bzdio.
	- check for API/ABI creep, diddle up some compatibility.
	- preliminary abstraction to support per-header methods.
	- finalize per-header methods, accessing headerFoo through vector.
	- make package ordering loop messages debug, not warning.
	- remove {ia64,sparc}-linux.{prov,req}, changes merged into linux.*.
	- fix: partial sets of hardlinked files forbidden in payload.
	- fix: mark rpmdb files with %config to prevent erasure on downgrade.

4.0 -> 4.0.[12]
	- add doxygen and lclint annotations most everywhere.
	- rip out rpm{get,put}text, use getpo.sh and specspo instead.
	- consistent return for all signature verification.
	- use enums for almost all rpmlib #define's.
	- API: change rpmProblem typedef to pass by reference, not value.
	- unify rpmError and rpmMessge interfaces through rpmlog.
	- collect and display rpm build error messages at end of build.
	- don't trim leading ./ in rpmCleanPath() (#14961).
	- order packages using tsort, clipping PreReq:'s in dependency loops.
	- fix: avoid calling getpass twice as side effect of xstrdup macro
		(katzj@linuxpower.org) (#17672).
	- handle possible db3 dependency on -lpthread more gracefully.
	- fix: more (possible) xstrdup side effects.
	- detect (still need to test) rdonly linux file systems.
	- check available inodes as well as blocks on mounted file systems.
	- pass rpmTransactionSet, not elements, to installBinaryPackage et al.
	- verify MD5 sums of payload files when unpacking archive.
	- fix: runTriggers was not adding countCorrection.
	- add cscope/ctags (Rodrigo Barbosa<rodrigob@conectiva.com.br>).
	- remove getMacroBody() from rpmio API.
	- hide libio lossage in prototype, not API.
	- add brp-strip-shared script <rodrigob@conectiva.com.br>.
	- better item/task progress bars <rodrigob@conectiva.com.br>.
	- add support for SHA1 as well as MD5 message digests.
	- add rpmGetRpmlibProvides() to retrieve rpmlib(...) provides