@@ -114,6 +114,13 @@ capabilities.
 %setup -q
 
 %build
+
+#
+# XXX work around a (possible) compiler problem on ia64
+%ifarch ia64
+RPM_OPT_FLAGS="-O0"
+#endif
+
 %ifos linux
 CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%{__prefix} --sysconfdir=/etc --localstatedir=/var --infodir='${prefix}%{__share}/info' --mandir='${prefix}%{__share}/man'
 %else
